--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
 <br><br><br>
     
       <!-- Activity section -->
-            <div class="row activity text-center">
-                  <!--<div class="col-md act">
-                    <img src="users.png" class="img-fluid">
-                    <br>
-                    <a href="createuser.php"><button>Create a User</button></a>
-                  </div> -->
+            <div class="row activity text-center" style="background-image: url('https://i.pinimg.com/originals/74/43/a3/7443a31b6a19e5630b94a6538ff9bdd1.gif');">
                   <div class="col-md act">
                     <img src="moneytransfer.png" class="img-fluid">
                     <br>
